# sgl

./: .CMakeLists.txt.swp  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-ImGui.txt  LICENSE-glsw.txt  README.md  doxygen.conf  sglConfig.cmake.in  vcpkg.json
.github/workflows/: build-brew.yml  build-msys2.yml  build-ubuntu.yml  build-vcpkg.yml  build-windows.yml  cmake.yml
CMake/: FindSYCL.cmake  TestGlfw.cmake  TestGlfwBackend.cpp  sgl_glslangConfig.cmake  sgl_shadercConfig.cmake
docs/: main_page.md  profiling-tracy.md  updating_imgui.md
docs/compilation/: compilation_linux.md  compilation_msys.md  compilation_vcpkg.md
src/: Defs.hpp
src - Kopie/: Defs.hpp
src - Kopie/Graphics/: Color.hpp  Renderer.hpp
src - Kopie/Graphics/Buffers/: GeometryBuffer.hpp
src - Kopie/Graphics/Mesh/: Material.hpp  Mesh.cpp  Mesh.hpp  SubMesh.cpp  SubMesh.hpp  Vertex.hpp
src - Kopie/Graphics/OpenGL/: FBO.hpp  GeometryBuffer.hpp  RendererGL.cpp  RendererGL.hpp  Shader.hpp  ShaderAttributes.cpp  ShaderManager.cpp  ShaderManager.hpp  SystemGL.cpp  SystemGL.hpp  Texture.cpp  TextureManager.cpp  TimerGL.cpp
src - Kopie/Graphics/Scene/: Camera.cpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.hpp  SceneGraph.hpp  SceneNode.hpp  Transform.hpp
src - Kopie/Graphics/Shader/: Shader.hpp  ShaderAttributes.hpp  ShaderManager.cpp
src - Kopie/Graphics/Texture/: Bitmap.cpp  Bitmap.hpp  Texture.hpp  TextureManager.hpp
src - Kopie/ImGui/: ImGuiWrapper.hpp  imgui_custom.cpp  imgui_custom.h  imgui_impl_sdl.cpp
src - Kopie/Input/: Keyboard.hpp
src - Kopie/Math/Geometry/: AABB3.hpp  MatrixUtil.cpp  Plane.hpp  Point2.hpp  Ray3.hpp  Sphere.hpp
src - Kopie/SDL/: HiDPI.hpp  SDLWindow.cpp  SDLWindow.hpp
src - Kopie/SDL/Input/: SDLGamepad.hpp  SDLKeyboard.cpp  SDLKeyboard.hpp  SDLMouse.cpp
src - Kopie/Utils/: AppLogic.cpp  AppSettings.cpp  Convert.hpp  Singleton.hpp  StringUtils.hpp  Timer.cpp
src - Kopie/Utils/Events/: EventManager.hpp
src - Kopie/Utils/File/: Execute.cpp  FileUtils.cpp  Logfile.cpp  Logfile.hpp
src - Kopie/Utils/Random/: Random.cpp  Random.hpp  Xorshift.cpp  Xorshift.hpp
src/GLFW/: GlfwWindow.cpp  GlfwWindow.hpp
src/GLFW/Input/: GlfwGamepad.cpp  GlfwGamepad.hpp  GlfwKeyboard.cpp  GlfwKeyboard.hpp  GlfwMouse.cpp  GlfwMouse.hpp
src/Graphics/: Color.cpp  Color.hpp  Renderer.hpp  Window.cpp  Window.hpp
src/Graphics/Buffers/: FBO.hpp  GeometryBuffer.hpp  RBO.hpp
src/Graphics/Compression/: Compression.cpp  Compression.hpp
src/Graphics/D3D12/: DXGIFactory.cpp  DXGIFactory.hpp  Device.cpp  Device.hpp  d3d12.hpp
src/Graphics/GLSL/: PreprocessorGlsl.cpp  PreprocessorGlsl.hpp
src/Graphics/Mesh/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  SubMesh.cpp  SubMesh.hpp  Vertex.hpp
src/Graphics/OpenGL/: FBO.cpp  FBO.hpp  GeometryBuffer.cpp  GeometryBuffer.hpp  RBO.cpp  RBO.hpp  RendererGL.cpp  RendererGL.hpp  Shader.cpp  Shader.hpp  ShaderAttributes.cpp  ShaderAttributes.hpp  ShaderManager.cpp  ShaderManager.hpp  SystemGL.cpp  SystemGL.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  TimerGL.cpp  TimerGL.hpp
src/Graphics/Scene/: Camera.cpp  Camera.hpp  CameraHelper.cpp  CameraHelper.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.hpp  SceneGraph.hpp  SceneNode.cpp  SceneNode.hpp  Transform.hpp
src/Graphics/Shader/: Shader.hpp  ShaderAttributes.hpp  ShaderManager.cpp  ShaderManager.hpp
src/Graphics/Texture/: Bitmap.cpp  Bitmap.hpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
src/Graphics/Utils/: DeviceSelection.cpp  DeviceSelection.hpp  FormatInfo.hpp  HiDPI.cpp  HiDPI.hpp  InteropCompute.cpp  InteropCompute.hpp  InteropCuda.cpp  InteropCuda.hpp  InteropHIP.cpp  InteropHIP.hpp  InteropLevelZero.cpp  InteropLevelZero.hpp  RenderSystem.hpp
src/Graphics/Vector/: NanoVGWidget.cpp  NanoVGWidget.hpp  VectorBackend.hpp  VectorBackendNanoVG.cpp  VectorBackendNanoVG.hpp  VectorWidget.cpp  VectorWidget.hpp
src/Graphics/Video/: VideoWriter.cpp  VideoWriter.hpp
src/ImGui/: IMGUI-LICENSE.txt  ImGuiWrapper.cpp  ImGuiWrapper.hpp  imgui.cpp  imgui.h  imgui_custom.cpp  imgui_custom.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp  imgui_internal.h  imgui_verticaltext.cpp  imgui_verticaltext.h  imgui_widgets.cpp
src/ImGui/ImGuiFileDialog/: CustomFont.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
src/ImGui/Widgets/: CheckpointWindow.cpp  CheckpointWindow.hpp  ColorLegendWidget.cpp  ColorLegendWidget.hpp  CoordinateAxesOverlayWidget.cpp  CoordinateAxesOverlayWidget.hpp  MultiVarTransferFunction2dWindow.cpp  MultiVarTransferFunction2dWindow.hpp  MultiVarTransferFunctionWindow.cpp  MultiVarTransferFunctionWindow.hpp  NumberFormatting.cpp  NumberFormatting.hpp  PropertyEditor.cpp  (+3 more)
src/Input/: Gamepad.hpp  Keyboard.hpp  Mouse.hpp
src/Math/: Math.cpp  Math.hpp
src/SDL/: HiDPI.cpp  HiDPI.hpp  SDL3Helper.hpp  SDLTimer.cpp  SDLTimer.hpp  SDLWindow.cpp  SDLWindow.hpp
src/SDL3/: SDL3Window.cpp  SDL3Window.hpp
src/Utils/: AppLogic.cpp  AppLogic.hpp  AppSettings.cpp  AppSettings.hpp  CircularQueue.hpp  Convert.cpp  Convert.hpp  DebugWriter.cpp  DebugWriter.hpp  Defer.hpp  Dialog.cpp  Dialog.hpp  Env.cpp  Env.hpp  Format.cpp  Format.hpp  FramerateSmoother.cpp  FramerateSmoother.hpp  HashCombine.hpp  Memory.hpp  RemoteUtils.cpp  RemoteUtils.hpp  Singleton.hpp  StringUtils.cpp  StringUtils.hpp  Timer.cpp  Timer.hpp  VariadicHelpers.hpp  XML.cpp  XML.hpp
tests/CUDA/: CudaDeviceCode.cu  CudaDeviceCode.hpp  TestCudaVulkan.cpp
tests/D3D12/: TestD3D12.cpp  TestLowLevelInteropD3D12.cpp  TestSyclD3D12.cpp
tests/Math/: TestMath.cpp
tests/SYCL/: Common.cpp  Common.hpp  CommonSycl.cpp  CommonSycl.hpp  SyclDeviceCode.cpp  SyclDeviceCode.hpp  TestSycl.cpp
tests/Utils/: Common.cpp  Common.hpp  Format.cpp  FormatRange.cpp  FormatRange.hpp  Unicode.cpp
tests/Vulkan/: ImageFormatsVulkan.hpp  TestLowLevelInteropVulkan.cpp  TestSyclVulkan.cpp
(+375 files in other folders)
